# Plagiarism-Analyzer

./: README.md  pyproject.toml
src/plagiarism_analyzer/: __init__.py  cli.py  config.py  detection.py  features.py  preprocessing.py  report.py
tests/: __init__.py  test_detection.py  test_preprocessing.py
