[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plagiarism-analyzer-ai"
version = "0.1.0"
description = "Plagiarism Analyzer using Artificial Intelligence (TF-IDF & cosine similarity)."
readme = "README.md"
authors = [
    { name = "Mobin Yousefi", email = "example@example.com" },
]
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.3.0",
    "pytest>=8.0.0",
]

[project.scripts]
plagiarism-analyzer = "plagiarism_analyzer.cli:main"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]
exclude = [
    "build",
    "dist",
    "venv",
    ".venv",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]